force-app/main/default/objects/Translation_Map__c/Translation_Map__c.object-meta.xml
<CustomObject>
    <description>Map Record value with Translation</description>
    <label>Translation Map</label>
    <nameField>
        <displayFormat>TLM-{0000}</displayFormat>
        <label>Translation Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Translation Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>