force-app/main/default/objects/Translation_Map__c/fields/Translation_10__c.field-meta.xml
<CustomField>
    <fullName>Translation_10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Translation Value of Field 10.</description>
    <inlineHelpText>Translation Value of Field 10.</inlineHelpText>
    <label>Translation 10</label>
    <referenceTo>Translation__c</referenceTo>
    <relationshipLabel>Translation Maps 10</relationshipLabel>
    <relationshipName>Translation_Maps_10</relationshipName>
    <type>Lookup</type>
</CustomField>