force-app/main/default/objects/Translation_Map__c/fields/Translation_1__c.field-meta.xml
<CustomField>
    <fullName>Translation_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Translation Value of Field 1.</description>
    <inlineHelpText>Translation Value of Field 1.</inlineHelpText>
    <label>Translation 1</label>
    <referenceTo>Translation__c</referenceTo>
    <relationshipLabel>Translation Maps 1</relationshipLabel>
    <relationshipName>Translation_Maps_1</relationshipName>
    <type>Lookup</type>
</CustomField>