force-app/main/default/objects/Translation_Map__c/fields/Translation_2__c.field-meta.xml
<CustomField>
    <fullName>Translation_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Translation Value of Field 2.</description>
    <inlineHelpText>Translation Value of Field 2.</inlineHelpText>
    <label>Translation 2</label>
    <referenceTo>Translation__c</referenceTo>
    <relationshipLabel>Translation Maps 2</relationshipLabel>
    <relationshipName>Translation_Maps_2</relationshipName>
    <type>Lookup</type>
</CustomField>